--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "https://kowalikmichal.github.io/ReactQuiz"
 }
